<resources>
    <string name="about_app">Aurora is an open source alternative to Play Store, it lets you download apps from Play Store. It can search for updates of installed apps and lets you search for other apps.</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_devs">Developers</string>
    <string name="about_github">GitHub</string>
    <string name="about_opensource">Open source libaries</string>
    <string name="about_telegram">Telegram</string>
    <string name="about_xda">Dev Thread</string>
    <string name="account_dummy_email">anonymous@anonymous</string>
    <string name="acc_dummy">Login as Anonymous</string>
    <string name="acc_dummy_name">Anonymous</string>
    <string name="acc_google">Login with Google</string>
    <string name="acc_save">Save Account</string>
    <string name="action_about">About</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_acc_add">Add Google Account</string>
    <string name="action_acc_switch">Tap to switch</string>
    <string name="action_acc_txt">Aurora Accounts</string>
    <string name="action_categories">Categories</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_apps_with_ads">Apps with ads</string>
    <string name="action_filter_category">"Category: %1$s"</string>
    <string name="action_filter_downloads">"Downloads: %1$s"</string>
    <string name="action_filter_gsf_dependent_apps">GSF dependent apps</string>
    <string name="action_filter_paid_apps">Paid apps</string>
    <string name="action_filter_rating">"Rating: %1$s"</string>
    <string name="action_filter_system_apps">System apps</string>
    <string name="action_get_local_apk">Get local apk</string>
    <string name="action_home">Home</string>
    <string name="action_myApps">My Apps</string>
    <string name="action_ignore">Blacklist</string>
    <string name="action_ignore_ext">Add to Blacklist</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Log out</string>
    <string name="action_make_normal">Convert to normal app</string>
    <string name="action_make_system">Convert to system app</string>
    <string name="action_manual">Manual download</string>
    <string name="action_ok">OK</string>
    <string name="action_or">OR</string>
    <string name="action_refresh">Refresh Token</string>
    <string name="action_remove">Remove</string>
    <string name="action_search_history">Your Search History</string>
    <string name="action_search_clearHistory">Clear all</string>
    <string name="action_search_title">Search Apps &amp; Games</string>
    <string name="action_select">Select an account to login</string>
    <string name="action_settings">Settings</string>
    <string name="action_spoofed">Spoof</string>
    <string name="action_switch_dummy">Switch Dummy</string>
    <string name="action_switch_google">Switch Google</string>
    <string name="action_unignore">Remove from blacklist</string>
    <string name="action_unwhitelist">Ignore updates</string>
    <string name="action_updates">Updates</string>
    <string name="action_welcome_msg">Welcome to Aurora</string>
    <string name="action_whitelist">Whitelist for updates</string>
    <string name="activity_title_search">"Results for %1$s"</string>
    <string name="activity_title_updates_only">Updates</string>
    <string name="all_categories">All categories</string>
    <string name="apps_by">Apps by %1$s</string>
    <string name="availability_restriction_country">"This item isn't available in your country."</string>
    <string name="availability_restriction_generic">"This item isn't available."</string>
    <string name="availability_restriction_hardware_app">"Your device isn't compatible with this version."</string>
    <string name="category_appFree">Free</string>
    <string name="category_communityApps">Based on Aurora Community</string>
    <string name="category_fdroidApps">Apps on FDroid</string>
    <string name="category_topFree">Top Free</string>
    <string name="category_topGrossing">Top Grossing</string>
    <string name="category_topMusicVideo">Music &amp; Audio</string>
    <string name="category_topUtility">Tools &amp; Utilities</string>
    <string name="category_trending">Trending</string>
    <string name="content_flagged">Objection submitted.</string>
    <string name="credentials_hint_email">Email or phone</string>
    <string name="credentials_hint_password">Enter your password</string>
    <string name="credentials_logo_txt">Sign in</string>
    <string name="credentials_message">Keep in mind that using this app violates Play Store T&amp;C. \nIt would probably be safer to use a throwaway Google account which has logged in to Play Store at least once and has accepted Play Store T&amp;C.</string>
    <string name="credentials_title">Google account access</string>
    <string name="delete">Delete</string>
    <string name="delta_disabled">Delta updates disabled</string>
    <string name="delta_enabled">Delta updates enabled</string>
    <string name="details_appExtras">Additional Information</string>
    <string name="details_appInfo">App Info</string>
    <string name="details_appReview">Reviews</string>
    <string name="details_cancel">Cancel</string>
    <string name="details_category">"%1$s"</string>
    <string name="details_contains_ads">Contains ads</string>
    <string name="details_could_not_copy_apk">Could not copy apk</string>
    <string name="details_changelog_empty">No changelog available</string>
    <string name="details_description">Read more</string>
    <string name="details_developer">"%1$s"</string>
    <string name="details_download">Get</string>
    <string name="details_download_checking">Checking</string>
    <string name="details_download_not_available">Not available</string>
    <string name="details_install">Install</string>
    <string name="details_installed">"Installed successfully"</string>
    <string name="details_installing">Installing</string>
    <string name="details_install_failure">"Could not install"</string>
    <string name="details_more">More</string>
    <string name="details_not_available_on_play_store">Not available on Play Store</string>
    <string name="details_no_ads">No ads</string>
    <string name="details_permissions">App permissions</string>
    <string name="details_playstore">Play Store</string>
    <string name="details_purchase">Purchase</string>
    <string name="details_rate_this_app">Rate this app</string>
    <string name="details_review_dialog_fields_optional">You can leave everything blank.</string>
    <string name="details_review_dialog_review_comment_hint">comment here</string>
    <string name="details_review_dialog_review_title_hint">title here</string>
    <string name="details_review_dialog_title">Anything else to add?</string>
    <string name="details_run">Open</string>
    <string name="details_saved_in_downloads">Saved in your Downloads folder</string>
    <string name="details_share">Share</string>
    <string name="details_signature_mismatch">The new version is signed with a different key to the old one. To install the new version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase any internal data stored by the application)</string>
    <string name="details_size">"%1$s"</string>
    <string name="details_uninstall">Uninstall</string>
    <string name="details_update">Update</string>
    <string name="details_updated">"%1$s"</string>
    <string name="details_versionName">"%1$s"</string>
    <string name="details_versionName_updatable">"%1$s → %2$s"</string>
    <string name="details_wishList">Add to wishlist</string>
    <string name="details_you_rated_this_app">Your rating</string>
    <string name="device_api">"API : %1$s"</string>
    <string name="device_board">"Board : %1$s"</string>
    <string name="device_cpu">"%1$s"</string>
    <string name="device_gsfID">"GSF ID : %1$s"</string>
    <string name="device_manufacturer">"By : %1$s"</string>
    <string name="device_model">"%1$s ( %2$s )"</string>
    <string name="device_res">"%1$s x %2$s"</string>
    <string name="device_timezone">"Timezone : %1$s"</string>
    <string name="dialog_account_type_predefined">With a dummy Aurora Store account</string>
    <string name="dialog_account_type_provided_by_user">With your own Google account</string>
    <string name="dialog_account_type_title">How would you like to log in to Google Play Store?</string>
    <string name="dialog_message_busybox_not_available">A rooted device with busybox installed is required to work with system apps. Search for a busybox installer now?</string>
    <string name="dialog_message_checking_busybox">Certain system tools are required to work with system apps. Checking if they are available.</string>
    <string name="dialog_message_logging_in_predefined">Trying to log in with credentials provided by Aurora Store</string>
    <string name="dialog_message_logging_in_provided_by_user">Trying to log in with the credentials you provided</string>
    <string name="dialog_message_logout">Are you sure you want to log out?</string>
    <string name="dialog_message_package_id">There is a package with this exact name. Would you like to go directly to its details page?</string>
    <string name="dialog_message_reboot_required">Changes will be applied after reboot. Reboot now?</string>
    <string name="dialog_message_remounting_system">"Working with /system partition. This might take some time."</string>
    <string name="dialog_message_switching_in_predefined">Trying to switch between dummy accounts</string>
    <string name="dialog_message_system_app_self">Using privileged permissions to allow background installation of apps requires making Aurora Store a system app.\n\nThe process is imperfect and vendor-specific, so it might not work.\n\nDo it?</string>
    <string name="dialog_message_system_app_warning_to_normal">You have selected to convert a system app into a normal app. Most system apps need to be system apps to work.\n\nKeep in mind that the conversion process is NOT supported by the Android OS and therefore is NOT safe and NOT guaranteed to work.\n\nDo not do it out of curiosity. It might break your device. Backup your device before trying.</string>
    <string name="dialog_message_system_app_warning_to_system">You have selected to convert the app into system app. Most apps do not need to be system apps to work.\n\nKeep in mind that the conversion process is NOT supported by the Android OS and therefore is NOT safe and NOT guaranteed to work.\n\nDo not do it out of curiosity. It might break your device. Backup your device before trying.</string>
    <string name="dialog_message_system_app_warning_uninstall">Are you sure you want to remove this system app? System apps are placed into your device by device vendor and are most likely required for it to function as intended.\n\nKeep in mind that removing system apps is NOT supported by the Android OS and therefore is NOT safe and NOT guaranteed to work.\n\nDo not do it out of curiosity. It might break your device. Backup your device before trying.</string>
    <string name="dialog_message_two_factor">It appears you have enabled 2-Step Verification for your account.\n\nPlease, create a dedicated app password for Aurora Store and use it to log in to the Aurora Store.\n\nTap \"Create password\" to be redirected to password creation page.</string>
    <string name="dialog_title_busybox_not_available">Busybox not available</string>
    <string name="dialog_title_checking_busybox">Checking if busybox is available</string>
    <string name="dialog_title_logging_in">Logging in</string>
    <string name="dialog_title_logout">Log out?</string>
    <string name="dialog_title_package_id">Package with this name exists</string>
    <string name="dialog_title_reboot_required">Reboot required</string>
</resources>