<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_systemapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_system_apps"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_apps_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_apps_with_ads"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_paidapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_paid_apps"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_gsf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_gsf_dependent_apps"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_categories"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider6"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_downs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_downloads"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/filter_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/action_filter_rating"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>